--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
+  <link sizes="192x192" rel="icon" href="imgs/favicon.png" />
   <title>Plural Sight Login Clone</title>
 </head>
 <body>
